--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.2.9",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
